# git-gud-samaritans

./: .env.example  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  BOOTSTRAP_PROMPT.md  CLAUDE.md  CODING_STANDARDS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/rules/: nexus-agents.md
.github/workflows/: ci.yml
config/: discovery-rules.yaml  mcp-config.json  nexus-config.yaml  sandbox.yaml  triage-scoring.yaml
docs/: SANDBOX_INTEGRATION_PLAN.md
src/git_gud_samaritans/: __init__.py  cli.py
src/git_gud_samaritans/contribute/: __init__.py  orchestrator.py  pr_generator.py  verification.py
src/git_gud_samaritans/discovery/: __init__.py  github_scanner.py  issue_finder.py  pr_analyzer.py
src/git_gud_samaritans/sandbox/: __init__.py  cli.py  manager.py
src/git_gud_samaritans/triage/: __init__.py  complexity.py  fit_analyzer.py  scorer.py
src/git_gud_samaritans/utils/: __init__.py
tests/: __init__.py  conftest.py  test_cli.py
tests/test_contribute/: __init__.py  test_orchestrator.py  test_pr_generator.py  test_verification.py
tests/test_discovery/: __init__.py  test_github_scanner.py  test_issue_finder.py  test_pr_analyzer.py
tests/test_sandbox/: test_cli.py  test_manager.py
tests/test_triage/: __init__.py  test_complexity.py  test_fit_analyzer.py  test_scorer.py
